--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
 		"@textbook/build-info": "^1.1.2",
 		"@types/supertest": "^6.0.2",
 		"@vitejs/plugin-react-swc": "^3.5.0",
-		"@vitest/coverage-istanbul": "^1.2.1",
+		"@vitest/coverage-v8": "^1.2.1",
 		"axe-core": "^4.8.3",
 		"clsx": "^2.1.0",
 		"concurrently": "^8.2.2",
