Upgrade Husky to v9

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
 		"lint:fix": "npm run lint:eslint -- --fix . && npm run lint:prettier -- --write .",
 		"lint:prettier": "prettier --config .config/.prettierrc --ignore-path .config/.lintignore --ignore-unknown",
 		"migration": "node-pg-migrate --config-file .config/migrations.json",
-		"prepare": "husky install || echo 'No Husky 🐶'",
+		"prepare": "husky || echo 'No Husky 🐶'",
 		"preserve": "npm run build",
 		"serve": "npm start",
 		"services:start": "docker compose up --build --detach",
@@ -85,7 +85,7 @@
 		"history": "^5.3.0",
 		"html-webpack-plugin": "^5.6.0",
 		"html-webpack-tags-plugin": "^3.0.2",
-		"husky": "^8.0.3",
+		"husky": "^9.0.10",
 		"jest": "^29.7.0",
 		"jest-environment-jsdom": "^29.7.0",
 		"lint-staged": "^15.2.2",
