--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
 		"@babel/node": "^7.23.9",
 		"@babel/plugin-transform-runtime": "^7.24.3",
 		"@babel/preset-env": "^7.24.5",
-		"@codeyourfuture/eslint-config-standard": "^4.0.3",
+		"@codeyourfuture/eslint-config-standard": "^5.1.0",
 		"@testing-library/cypress": "^10.0.1",
 		"@testing-library/jest-dom": "^6.4.5",
 		"@testing-library/react": "^15.0.7",
@@ -84,7 +84,7 @@
 		"eslint-plugin-react": "^7.34.1",
 		"eslint-plugin-react-hooks": "^4.6.2",
 		"eslint-plugin-testing-library": "^6.2.2",
-		"eslint-plugin-vitest": "^0.4.1",
+		"eslint-plugin-vitest": "~0.4.1",
 		"history": "^5.3.0",
 		"husky": "^9.0.11",
 		"jest": "^29.7.0",
