--- a/package.json
+++ b/package.json
@@ -54,74 +54,74 @@
 	},
 	"homepage": "https://github.com/CodeYourFuture/tech-products-demo#readme",
 	"devDependencies": {
-		"@babel/cli": "^7.24.5",
-		"@babel/core": "^7.24.5",
-		"@babel/eslint-parser": "^7.24.5",
-		"@babel/node": "^7.23.9",
-		"@babel/plugin-transform-runtime": "^7.24.3",
-		"@babel/preset-env": "^7.24.5",
+		"@babel/cli": "^7.24.7",
+		"@babel/core": "^7.24.7",
+		"@babel/eslint-parser": "^7.24.7",
+		"@babel/node": "^7.24.7",
+		"@babel/plugin-transform-runtime": "^7.24.7",
+		"@babel/preset-env": "^7.24.7",
 		"@codeyourfuture/eslint-config-standard": "^5.1.0",
-		"@testing-library/cypress": "^10.0.1",
-		"@testing-library/jest-dom": "^6.4.5",
+		"@testing-library/cypress": "^10.0.2",
+		"@testing-library/jest-dom": "^6.4.6",
 		"@testing-library/react": "^15.0.7",
 		"@testing-library/user-event": "^14.5.2",
 		"@textbook/build-info": "^1.2.1",
 		"@types/supertest": "^6.0.2",
-		"@vitejs/plugin-react-swc": "^3.6.0",
+		"@vitejs/plugin-react-swc": "^3.7.0",
 		"@vitest/coverage-v8": "^1.6.0",
 		"axe-core": "^4.9.1",
 		"clsx": "^2.1.1",
 		"concurrently": "^8.2.2",
 		"cross-env": "^7.0.3",
-		"cypress": "^13.9.0",
+		"cypress": "^13.12.0",
 		"cypress-axe": "^1.5.0",
 		"del-cli": "^5.1.0",
 		"eslint": "^8.57.0",
-		"eslint-plugin-cypress": "^3.2.0",
+		"eslint-plugin-cypress": "^3.3.0",
 		"eslint-plugin-import": "^2.29.1",
-		"eslint-plugin-jest": "^28.5.0",
+		"eslint-plugin-jest": "^28.6.0",
 		"eslint-plugin-jsx-a11y": "^6.8.0",
-		"eslint-plugin-react": "^7.34.1",
+		"eslint-plugin-react": "^7.34.3",
 		"eslint-plugin-react-hooks": "^4.6.2",
 		"eslint-plugin-testing-library": "^6.2.2",
-		"eslint-plugin-vitest": "~0.4.1",
+		"eslint-plugin-vitest": "^0.4.1",
 		"history": "^5.3.0",
 		"husky": "^9.0.11",
 		"jest": "^29.7.0",
-		"jsdom": "^24.0.0",
-		"lint-staged": "^15.2.2",
-		"msw": "^2.3.0",
-		"nodemon": "^3.1.0",
+		"jsdom": "^24.1.0",
+		"lint-staged": "^15.2.7",
+		"msw": "^2.3.1",
+		"nodemon": "^3.1.3",
 		"nyc": "^15.1.0",
-		"prettier": "^3.2.5",
+		"prettier": "^3.3.2",
 		"prop-types": "^15.8.1",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
 		"react-router-dom": "^6.23.1",
-		"sass": "^1.77.2",
+		"sass": "^1.77.6",
 		"supertest": "^7.0.0",
-		"vite": "^5.2.11",
+		"vite": "^5.3.1",
 		"vitest": "^1.2.2",
 		"wait-on": "^7.2.0",
 		"whatwg-fetch": "^3.6.20"
 	},
 	"dependencies": {
-		"@babel/runtime": "^7.24.5",
+		"@babel/runtime": "^7.24.7",
 		"connect-pg-simple": "^9.0.1",
 		"dotenv": "^16.4.5",
 		"dotenv-expand": "^11.0.6",
 		"express": "^4.19.2",
 		"express-session": "^1.18.0",
-		"express-validation": "^4.1.0",
+		"express-validation": "^4.1.1",
 		"helmet": "^7.1.0",
 		"morgan": "^1.10.0",
-		"node-pg-migrate": "^7.3.2",
+		"node-pg-migrate": "^7.5.0",
 		"passport": "^0.7.0",
 		"passport-github2": "^0.1.12",
-		"pg": "^8.11.5",
+		"pg": "^8.12.0",
 		"pg-format": "^1.0.4",
 		"swagger-jsdoc": "^6.2.8",
-		"swagger-ui-express": "^5.0.0",
+		"swagger-ui-express": "^5.0.1",
 		"winston": "^3.13.0"
 	},
 	"engines": {
