--- a/package.json
+++ b/package.json
@@ -62,8 +62,9 @@
 		"@babel/preset-env": "^7.24.7",
 		"@codeyourfuture/eslint-config-standard": "^5.1.0",
 		"@testing-library/cypress": "^10.0.2",
+		"@testing-library/dom": "^10.1.0",
 		"@testing-library/jest-dom": "^6.4.6",
-		"@testing-library/react": "^15.0.7",
+		"@testing-library/react": "^16.0.0",
 		"@testing-library/user-event": "^14.5.2",
 		"@textbook/build-info": "^1.2.1",
 		"@types/supertest": "^6.0.2",
