--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -11,7 +11,17 @@
 		{
 			"files": ["setupTests.mjs", "**/*.test.js?(x)"],
 			"env": { "vitest/env": true },
-			"extends": ["plugin:testing-library/react", "plugin:vitest/recommended"]
+			"extends": ["plugin:testing-library/react"],
+			"plugins": ["vitest"],
+			"rules": {
+				"vitest/expect-expect": "error",
+				"vitest/no-commented-out-tests": "error",
+				"vitest/no-identical-title": "error",
+				"vitest/no-import-node-test": "error",
+				"vitest/valid-describe-callback": "error",
+				"vitest/valid-expect": "error",
+				"vitest/valid-title": "error"
+			}
 		}
 	],
 	"parserOptions": {
