--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
 		"@types/supertest": "^6.0.2",
 		"@vitejs/plugin-react-swc": "^3.7.0",
 		"@vitest/coverage-v8": "^2.0.5",
+		"@vitest/eslint-plugin": "^1.0.4",
 		"axe-core": "^4.10.0",
 		"clsx": "^2.1.1",
 		"concurrently": "^8.2.2",
@@ -85,7 +86,6 @@
 		"eslint-plugin-react": "^7.35.0",
 		"eslint-plugin-react-hooks": "^4.6.2",
 		"eslint-plugin-testing-library": "^6.3.0",
-		"eslint-plugin-vitest": "^0.5.4",
 		"history": "^5.3.0",
 		"husky": "^9.1.5",
 		"jest": "^29.7.0",
