Migrate PATCH requests to JSON Patch format

--- a/server/.eslintrc.json
+++ b/server/.eslintrc.json
@@ -11,6 +11,7 @@
 						"assertFunctionNames": [
 							"expect",
 							"agent.**.expect",
+							"*Agent.**.expect",
 							"request.**.expect",
 							"screen.findBy*"
 						]
