--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
 		"pree2e:run": "wait-on --log --timeout 60000 http-get://localhost:4201",
 		"e2e:run": "cypress run",
 		"lint": "npm run lint:eslint . && npm run lint:prettier -- --check .",
-		"lint:eslint": "eslint --config .config/.eslintrc.json --ignore-path .config/.lintignore",
+		"lint:eslint": "cross-env ESLINT_USE_FLAT_CONFIG=true eslint --config .config/eslint.config.js",
 		"lint:fix": "npm run lint:eslint -- --fix . && npm run lint:prettier -- --write .",
 		"lint:prettier": "prettier --config .config/.prettierrc --ignore-path .config/.lintignore --ignore-unknown",
 		"migration": "node-pg-migrate --config-file .config/migrations.json",
@@ -67,6 +67,7 @@
 		"@testing-library/react": "^16.0.1",
 		"@testing-library/user-event": "^14.5.2",
 		"@textbook/build-info": "^1.3.0",
+		"@types/eslint": "^8.56.12",
 		"@types/supertest": "^6.0.2",
 		"@vitejs/plugin-react-swc": "^3.7.1",
 		"@vitest/coverage-v8": "^2.1.4",
@@ -86,6 +87,7 @@
 		"eslint-plugin-react": "^7.37.2",
 		"eslint-plugin-react-hooks": "^4.6.2",
 		"eslint-plugin-testing-library": "^6.4.0",
+		"globals": "^15.11.0",
 		"history": "^5.3.0",
 		"husky": "^9.1.6",
 		"jest": "^29.7.0",
